<resources>
    <string name="app_name">Guests</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_present">Present</string>
    <string name="menu_absent">Absent</string>
    <string name="menu_all_guests">All Guests</string>
    <string name="label_guest_name_input">Name</string>
    <string name="hint_guest_name_input">Guest name</string>
    <string name="label_guest_presence_input">Presence</string>
    <string name="radio_guest_presence_present">Present</string>
    <string name="radio_guest_presence_absent">Absent</string>
    <string name="button_save_guest">Save</string>
</resources>